--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.1",
     "truffle-contract": "^4.0.0-beta.1",
-    "web3": "^1.0.0-beta.36",
-    "xmlhttprequest": "^1.8.0"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
