--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bignumber.js": "^8.0.1",
+    "ethers": "^4.0.20",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -19,8 +20,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.1",
     "truffle-contract": "^4.0.0-beta.1",
-    "web3": "^1.0.0-beta.36",
-    "ethers": "^4.0.20"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
